# EventX_API

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
event_management/: pytest.ini
event_management/event_management/: settings.py  urls.py
event_management/events/: models.py  serializers.py  urls.py  utils.py  views.py
event_management/events/migrations/: 0001_initial.py  0002_alter_event_organizer.py  0003_eventregistration.py
event_management/events/tests/: test_api.py  test_email_notifications.py  test_models.py  test_modes.py  test_views.py
