[tool.poetry]
name = "eventx-api"
version = "0.1.0"
description = ""
authors = ["RedR1ghtHand <4aikaman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.1"
djangorestframework = "^3.15.2"
djoser = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
