[tool.poetry]
name = "eventx-api"
version = "0.1.0"
description = ""
authors = ["RedR1ghtHand <4aikaman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.1"
djangorestframework = "^3.15.2"
pytest = ">=7.0,<8.0"
pytest-django = "^4.9.0"
pytest-drf = "^1.1.3"
django-filter = "^24.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
